changed jar version; added UseConcMarkSweepGC